log
Thu 16 May 2024 03:08:47 PM UTC: 
 tests:  0|5
total_score: 0/70
ce1ba97
Thu 16 May 2024 03:10:35 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:21: error: implicit declaration of function ‘appendList’ [-Werror=implicit-function-declaration]
   62 |                     appendList(list, adj_node);
      |                     ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9c80b4f
Thu 16 May 2024 03:13:15 PM UTC: 
 sudoku.c | 16 ----------------
 1 file changed, 16 deletions(-)
 tests:  0|5
total_score: 0/70
c801c07
Thu 16 May 2024 03:15:06 PM UTC: 
 sudoku.c | 41 +++++++++++++++++++++++++++++++++++++++++
 1 file changed, 41 insertions(+)
 tests:  0|5
total_score: 0/70
b601b09
Thu 16 May 2024 03:24:52 PM UTC: 
 sudoku.c | 63 +++++++++++++++++++++++++++++++++++----------------------------
 1 file changed, 35 insertions(+), 28 deletions(-)
 tests:  3|4
total_score: 20/70
63d5812
Thu 16 May 2024 03:30:39 PM UTC: 
 sudoku.c | 51 +++++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 41 insertions(+), 10 deletions(-)
 tests:  0|5
total_score: 0/70
824f8d3
Thu 16 May 2024 03:31:52 PM UTC: 
 sudoku.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
de75323
Thu 16 May 2024 03:32:15 PM UTC: 
 sudoku.c | 41 -----------------------------------------
 1 file changed, 41 deletions(-)
 tests:  3|4
total_score: 20/70
141c47f
Thu 16 May 2024 03:37:10 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
3108509
Thu 16 May 2024 03:37:38 PM UTC: 
 sudoku.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:117:18: error: void value not ignored as it ought to be
  117 |     while ((temp = popFront(adj_nodes)) != NULL) {
      |                  ^
sudoku.c:122:5: error: implicit declaration of function ‘freeList’; did you mean ‘createList’? [-Werror=implicit-function-declaration]
  122 |     freeList(adj_nodes); // Liberar memoria de la lista de nodos adyacentes
      |     ^~~~~~~~
      |     createList
cc1: all warnings being treated as errors
Compilation failed
0e533c6
Thu 16 May 2024 03:38:44 PM UTC: 
 sudoku.c | 22 ++--------------------
 1 file changed, 2 insertions(+), 20 deletions(-)
 tests:  3|4
total_score: 20/70
f2c0759
Thu 16 May 2024 03:41:25 PM UTC: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  4|3
total_score: 30/70
0fb606e
Thu 16 May 2024 03:48:05 PM UTC: 
 sudoku.c | 18 ------------------
 1 file changed, 18 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:96:1: error: control reaches end of non-void function [-Werror=return-type]
   96 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a585286
Thu 16 May 2024 03:48:27 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  4|3
total_score: 30/70
c963266
Thu 16 May 2024 03:51:53 PM UTC: 
 sudoku.c | 28 +++++++++++++++++++++++++---
 1 file changed, 25 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:133:13: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  133 |     while (!isEmpty(stack)){
      |             ^~~~~~~
      |             is_empty
sudoku.c:134:25: error: void value not ignored as it ought to be
  134 |         Node* current = popBack(stack);
      |                         ^~~~~~~
sudoku.c:142:31: error: invalid use of incomplete typedef ‘List’
  142 |         Node* temp = adj_nodes->head;
      |                               ^~
sudoku.c:144:33: error: ‘Node’ has no member named ‘data’
  144 |             pushBack(stack, temp->data);
      |                                 ^~
sudoku.c:145:24: error: ‘Node’ has no member named ‘next’
  145 |             temp = temp->next;
      |                        ^~
sudoku.c:147:9: error: implicit declaration of function ‘destroyList’ [-Werror=implicit-function-declaration]
  147 |         destroyList(adj_nodes);
      |         ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9e762e9
Thu 16 May 2024 03:55:02 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:134:25: error: invalid use of void expression
  134 |         Node* current = (Node*)popBack(stack); // Hicimos un cast explícito a Node*
      |                         ^
sudoku.c:142:38: error: invalid use of incomplete typedef ‘List’
  142 |         Node* temp = (Node*)adj_nodes->first; // Hicimos un cast explícito a Node*
      |                                      ^~
sudoku.c:147:9: error: implicit declaration of function ‘destroyList’ [-Werror=implicit-function-declaration]
  147 |         destroyList(adj_nodes);
      |         ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
676475e
Thu 16 May 2024 03:56:20 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:134:25: error: invalid use of void expression
  134 |         Node* current = (Node*)popBack(stack);
      |                         ^
sudoku.c:142:38: error: invalid use of incomplete typedef ‘List’
  142 |         Node* temp = (Node*)adj_nodes->first;
      |                                      ^~
sudoku.c:147:9: error: implicit declaration of function ‘destroyList’ [-Werror=implicit-function-declaration]
  147 |         destroyList(adj_nodes);
      |         ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f27ac48
Thu 16 May 2024 03:59:00 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:134:40: error: invalid use of incomplete typedef ‘List’
  134 |         Node* current = (Node*)popBack(*stack);
      |                                        ^~~~~~
Compilation failed
73b5c34
Thu 16 May 2024 04:06:12 PM UTC: 
 sudoku.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:129:15: error: invalid use of void expression
  129 |     current = (Node *)popBack(stack);
      |               ^
Compilation failed
7851510
Thu 16 May 2024 04:06:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
922ff2e
